// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadFloat  1`] = `
Array [
  42,
  2,
  0,
]
`;

exports[`loadFloat  2`] = `
Array [
  33,
  0,
  32,
  0,
  65,
  127,
  74,
  4,
  127,
  65,
  0,
  5,
  32,
  0,
  11,
  42,
  2,
  0,
]
`;
